# visions

./: .envrc  .gitignore  .pre-commit-config.yaml  agents.md  docker-compose.yml  fnox.toml  justfile  mise.toml  readme.md  render.yaml  todo.md
backend/: .env.example  .gitignore  agents.md  alembic.ini  justfile  notepad.md  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d1ead2645bb_new_model.py  3bc6df87d1c4_rename_to_property.py  5e03eb6de4e2_generation_job_extra_context.py  5fcf8f1454e2_add_generation_extra_context.py  625ffd2a79e5_10_credits_by_default.py  943963c999a0_sharing.py  a1b2c3d4e5f6.py  a1b2c3d4e5f6_property_description_address.py  aefd23ac3dec_tz_datetimes.py  d629062358aa_.py  f34df36e27e8_llm_tokens_and_credit_balance.py
backend/scripts/: generate_openapi.py
backend/src/visions/: main.py  models.py
backend/src/visions/api/: auth.py  generation.py  houses.py  property.py  styles.py
backend/src/visions/core/: config.py  db.py  exception.py  security.py
backend/src/visions/services/: ai.py  events.py  gemini.py  generation.py  house.py  property.py  room.py  sharing.py  storage.py  style.py  user.py
backend/tests/: agents.md  conftest.py  test__events.py  test__generation.py  test__property.py  test__storage.py  test_api__config.py  test_auth.py  test_file_store_mixin.py  test_generation.py  test_houses.py
frontend/: .env  .env.example  .gitignore  agents.md  biome.json  index.html  justfile  nuxt.config.ts  orval.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.json  tsconfig.json  tsconfig.server.json
frontend/.nuxt/dev/: index.mjs  index.mjs.map
frontend/.nuxt/manifest/: latest.json
frontend/.nuxt/manifest/meta/: dev.json
frontend/.nuxt/types/: components.d.ts  imports.d.ts  layouts.d.ts  nitro-imports.d.ts  plugins.d.ts  schema.d.ts
frontend/src/: App.tsx  app.vue  index.css  main.tsx
frontend/src/components/: AppNavbar.vue  BeforeAfterDiff.tsx  Header.tsx  ImageCard.tsx  ImageTile.tsx  Layout.tsx  Navbar.tsx
frontend/src/composables/: useAuth.ts
frontend/src/features/auth/: AuthContext.tsx  LoginModal.tsx  LoginPage.tsx  ProtectedRoute.tsx
frontend/src/features/houses/: GenerationGallery.tsx  HouseCard.tsx  HouseGrid.tsx  NewProjectModal.tsx
frontend/src/features/houses/detail/: GenerationGallery.tsx  RoomUploader.tsx
frontend/src/features/properties/: NewProjectModal.tsx  NewProjectModal.vue  PropertyCard.tsx  PropertyCard.vue  PropertyGrid.tsx
frontend/src/features/properties/detail/: GenerateWizardModal.tsx  GenerationGallery.tsx  PropertyHeader.tsx  RoomImagesModal.tsx  RoomUploader.tsx
frontend/src/features/rooms/: RoomCard.vue  RoomUploadModal.vue
frontend/src/features/styles/: StyleCard.tsx  StylePicker.tsx
frontend/src/features/wizard/: Step1Identity.tsx  Step2Rooms.tsx  Step3Styles.tsx  StepConfirm.vue  StepStyles.vue  WizardModal.vue  WizardShell.tsx  useWizardState.ts
frontend/src/layouts/: default.vue
frontend/src/lib/: config.ts  generation.ts  supabase.ts  utils.test.ts
frontend/src/lib/api/: client.ts  hooks.ts  mutator.ts  queryKeys.ts  schema.d.ts
frontend/src/middleware/: auth.ts
frontend/src/pages/: AuthCallbackPage.tsx  HomePage.tsx  HouseDetailPage.tsx  LandingPage.tsx  ProfilePage.tsx  PropertyDetailPage.tsx  RoomViewPage.tsx  WizardPage.tsx  index.vue  login.vue
frontend/src/pages/auth/: AuthCallbackPage.tsx
frontend/src/pages/profile/: ProfilePage.tsx
frontend/src/pages/properties/: HomePage.tsx  PropertyDetailPage.tsx  [id].vue
frontend/src/plugins/: auth.ts  vue-query.ts
frontend/tests/e2e/: home.spec.ts
(+11 files in other folders)
