[project]
name = "backend"
version = "0.1.0"
description = "Visions – Interior Design Ideator API"
requires-python = ">=3.14.0"
dependencies = [
    # api
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "pydantic-settings>=2.13.1",
    # database
    "psycopg[binary,pool]>=3.2.0",
    "sqlmodel>=0.0.37",
    "supabase>=2.0.0",
    # agent
    "pydantic-ai-slim[google]>=1.65.0",
    "google-genai>=1.65.0",
    # storage
    "boto3>=1.42.60",
    "pillow>=12.1.1",
    # security
    "pyjwt[crypto]>=2.10.0",
    # utilities
    "loguru>=0.7.3",
    "greenlet>=3.3.2",
]

[dependency-groups]
dev = [
    # testing
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    # linting
    "pyrefly>=0.54.0",
    "ruff>=0.15.4",
    # types
    "types-boto3[essential]>=1.42.60",
    # migrations
    "alembic>=1.18.4",
    "moto[all]>=5.1.21",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
